DR-2373 DR-2384 Add transaction support as well as update support (#1197)
* Add delegate method to allow parameterized queries to BQ

* Create class to store common exceptions that we throw in multiple places

* Add an interface to make how we log datasets and snapshots ids more consistent

(and look to add more)

* Make DatasetTable implement LogPrintable

* Add REST layer for performing Xaction CRUD

* Add CRUD Transaction Create flight

* Wire in Upgrade

* Add Commit and Rollback support for transactions

* Add transaction support for ingests

* Add auto-softdelete step to ingest

...assuming the correct ingest strategy is selected

* Add Jira tickets to TODOs

* Add transaction support for soft delete flight

* Make sure that transactions are tied to a user

* Add more coverage for BigQueryPdao test

* Make sure that transaction doesn't hijack job response

* Fix how partitioned views get created

* Don't create the transaction column in the staging table and ensure that the APPEND update mode truly is default

* Add integration test for merging

* Test number went up because of the new file with 3 rows

which also shows that the default append update strategy properly inserts rather than merge

* Consistify transaction stairway steps

* Make method signature for commit step consistent

* Clean up tables in failed flights when in autocommit mode

For ingest and soft delete cases

* Add transaction testing to integration tests

* Make sure that data deletion undo works correctly

* Make sure that we run upgrade ingest and softdelete jobs

This is a temporary thing until we run the full migration

* Only migrate on ingest

Soft delete is rarely used and is causing a bunch of test breakage

* Make sure that the new file to ingest doesn't mess up other tests

* PR - rename log print method and move transaction close logic to service

* Replace Xaction shorthand with Transaction